qt/gen_qprocess.h

class QMetaObject;
class QObject;
class QProcess;
class QProcessEnvironment;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QProcess QProcess;
typedef struct QProcessEnvironment QProcessEnvironment;
typedef struct QTimerEvent QTimerEvent;
bool QProcess_override_virtual_open(void* self, intptr_t slot);
bool QProcess_override_virtual_waitForReadyRead(void* self, intptr_t slot);
bool QProcess_virtualbase_waitForReadyRead(void* self, int msecs);
bool QProcess_override_virtual_waitForBytesWritten(void* self, intptr_t slot);
bool QProcess_virtualbase_waitForBytesWritten(void* self, int msecs);
bool QProcess_override_virtual_bytesAvailable(void* self, intptr_t slot);
long long QProcess_virtualbase_bytesAvailable(const void* self);
bool QProcess_override_virtual_bytesToWrite(void* self, intptr_t slot);
long long QProcess_virtualbase_bytesToWrite(const void* self);
bool QProcess_override_virtual_isSequential(void* self, intptr_t slot);
bool QProcess_virtualbase_isSequential(const void* self);
bool QProcess_override_virtual_canReadLine(void* self, intptr_t slot);
bool QProcess_virtualbase_canReadLine(const void* self);
bool QProcess_override_virtual_close(void* self, intptr_t slot);
void QProcess_virtualbase_close(void* self);
bool QProcess_override_virtual_atEnd(void* self, intptr_t slot);
bool QProcess_virtualbase_atEnd(const void* self);
bool QProcess_override_virtual_setupChildProcess(void* self, intptr_t slot);
void QProcess_virtualbase_setupChildProcess(void* self);
bool QProcess_override_virtual_readData(void* self, intptr_t slot);
long long QProcess_virtualbase_readData(void* self, char* data, long long maxlen);
bool QProcess_override_virtual_writeData(void* self, intptr_t slot);
long long QProcess_virtualbase_writeData(void* self, const char* data, long long len);
bool QProcess_override_virtual_pos(void* self, intptr_t slot);
long long QProcess_virtualbase_pos(const void* self);
bool QProcess_override_virtual_size(void* self, intptr_t slot);
long long QProcess_virtualbase_size(const void* self);
bool QProcess_override_virtual_seek(void* self, intptr_t slot);
bool QProcess_virtualbase_seek(void* self, long long pos);
bool QProcess_override_virtual_reset(void* self, intptr_t slot);
bool QProcess_virtualbase_reset(void* self);
bool QProcess_override_virtual_readLineData(void* self, intptr_t slot);
long long QProcess_virtualbase_readLineData(void* self, char* data, long long maxlen);
bool QProcess_override_virtual_event(void* self, intptr_t slot);
bool QProcess_virtualbase_event(void* self, QEvent* event);
bool QProcess_override_virtual_eventFilter(void* self, intptr_t slot);
bool QProcess_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QProcess_override_virtual_timerEvent(void* self, intptr_t slot);
void QProcess_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QProcess_override_virtual_childEvent(void* self, intptr_t slot);
void QProcess_virtualbase_childEvent(void* self, QChildEvent* event);
bool QProcess_override_virtual_customEvent(void* self, intptr_t slot);
void QProcess_virtualbase_customEvent(void* self, QEvent* event);
bool QProcess_override_virtual_connectNotify(void* self, intptr_t slot);
void QProcess_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QProcess_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QProcess_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QProcess_staticMetaObject();
void QProcess_delete(QProcess* self);